welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:50: error: not found: value estBout
		} else if (!(possuivante()) && (!estBout())) 
                                                 ^